[project]
name = "jetweb"
version = "0.1.0"
description = "Lightweight Python WSGI-compatible web framework"
authors = [
    {name = "Nazarii Kuntsevych", email = "kuntsevych.n.v@gmail.com"},
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.20",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocstrings[python]==0.30.1",
    "pytest==8.4.2",
    "ruff==0.13.0",
]

[tool.setuptools]
packages = [
    "jetweb",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",       # code style
    "F",       # code errors
    "W",       # warnings
    "I",       # sorting
    "N",       # naming
    "ANN",     # annotations
    "Q",       # quotes
]
ignore = [
    "ANN002",  # annotations for *args
    "ANN003",  # annotations for **kwargs
    "ANN204",  # return annotations for magic methods
]

[tool.pytest.ini_options]
addopts = "--verbose"
